--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,33 @@
     <title>Carolina Spa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
+
 <body>
+    <header class="header contenedor">
+        <div class="header__grid">
+            <div class="header__logo">
+                <img src="src/img/logo.svg" alt="logo">
+            </div>
+            <nav class="redes">
+                <a href="">Hol</a>
+            </nav>
+        </div>
+    </header>
+    <div class="barra">
+        <div class="barra__border">
+            <div class="barra__contenido contenedor">
+                <a href="#" class="barra__enlace">Inicio</a>
+                <a href="#" class="barra__enlace">Nosotros</a>
+                <a href="#" class="barra__enlace">Servicios</a>
+                <a href="#" class="barra__enlace">Productos</a>
+                <a href="#" class="barra__enlace">Contactos</a>
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
