--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <img src="src/img/logo.svg" alt="logo">
             </div>
             <nav class="redes">
-                <a href="">Hol</a>
+                <a href="#" class="redes__icono">Facebook</a>
+                <a href="#" class="redes__icono">Twuiter</a>
+                <a href="#" class="redes__icono">Instagram</a>
+                <a href="#" class="redes__icono">YouTube</a>
+                <a href="#" class="redes__icono">TikTok</a>
             </nav>
         </div>
     </header>
