--- a/index.html
+++ b/index.html
@@ -38,6 +38,31 @@
             </div>
         </div>
     </div>
+    <div class="slider">
+        <ul class="slider__contenedor">
+            <li class="slider__slide">
+                <picture>
+                    <source srcset="build/img/slide_01.avif" type="image/avif">
+                    <source srcset="build/img/slide_01.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/slide_01.jpg" alt="slide 1">
+                </picture>
+            </li>
+            <li class="slider__slide">
+                <source srcset="build/img/slide_02.avif" type="image/avif">
+                <source srcset="build/img/slide_02.webp" type="image/webp">
+                <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1">
+            </li>
+            <li class="slider__slide">
+                <source srcset="build/img/slide_03.avif" type="image/avif">
+                <source srcset="build/img/slide_03.webp" type="image/webp">
+                <img loading="lazy" src="build/img/slide_03.jpg" alt="slide 1">
+            </li>
+        </ul>
+    </div>
+    <section class="bienvenida">
+        <h1 class="bienvenida__heading">Bienvenido (a) a nuestro<span>Sitio web</span> </h1>
+        <p class="bienvenida__texto">Te sentiras como nuevo(a) con nuestros masajistas profecionales</p>
+    </section>
 
 </body>
 
