--- a/index.html
+++ b/index.html
@@ -63,7 +63,45 @@
         <h1 class="bienvenida__heading">Bienvenido (a) a nuestro<span>Sitio web</span> </h1>
         <p class="bienvenida__texto">Te sentiras como nuevo(a) con nuestros masajistas profecionales</p>
     </section>
+    <section class="cards">
+        <div class="cards__grid contenedor">
+            <div class="card">
+                <picture>
+                    <source srcset="build/img/servicio_01.avif" type="image/avif">
+                    <source srcset="build/img/servicio_01.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/servicio_01.jpg" alt="Servicio 1" class="card__imagen">
+                </picture>
+                <div class="card__descripcion">
+                    <h2 class="card__titulo">Conoce sobre <span>Nosotros</span></h2>
+                    <a href="#" class="card__boton primario">Leer más</a>
+                </div>
+            </div>
 
+            <div class="card">
+                <picture>
+                    <source srcset="build/img/servicio_02.avif" type="image/avif">
+                    <source srcset="build/img/servicio_02.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/servicio_02.jpg" alt="Servicio 2" class="card__imagen">
+                </picture>
+                <div class="card__descripcion">
+                    <h2 class="card__titulo">Nuestros <span>Servicios</span></h2>
+                    <a href="#" class="card__boton primario">Leer más</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <picture>
+                    <source srcset="build/img/servicio_03.avif" type="image/avif">
+                    <source srcset="build/img/servicio_03.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/servicio_03.jpg" alt="Servicio 3" class="card__imagen">
+                </picture>
+                <div class="card__descripcion">
+                    <h2 class="card__titulo">Visita nuestra<span>tienda</span></h2>
+                    <a href="#" class="card__boton primario">Leer más</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
