--- a/index.html
+++ b/index.html
@@ -155,6 +155,67 @@
             </div>
         </div>
     </section>
+    <section class="productos contenedor seccion">
+        <h2 class="productos__heading">Nuestros <span>Productos</span></h2>
+        <div class="productos__grid">
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_01.avif" type="image/avif">
+                        <source srcset="build/img/producto_01.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_01.jpg" alt="productos1" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 1</h3>
+                    <p class="producto__descripcion">Lorem consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_02.avif" type="image/avif">
+                        <source srcset="build/img/producto_02.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_02.jpg" alt="productos2" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 2</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_03.avif" type="image/avif">
+                        <source srcset="build/img/producto_03.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_03.jpg" alt="productos1" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 3</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_04.avif" type="image/avif">
+                        <source srcset="build/img/producto_04.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_04.jpg" alt="productos4" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 4</h3>
+                    <p class="producto__descripcion">Lorem ipsum consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
