--- a/index.html
+++ b/index.html
@@ -214,7 +214,66 @@
                     <p class="producto__precio">$ <span>25</span></p>
                 </div>
             </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_05.avif" type="image/avif">
+                        <source srcset="build/img/producto_05.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_05.jpg" alt="productos5" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 5</h3>
+                    <p class="producto__descripcion">Lorem ipsum consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_06.avif" type="image/avif">
+                        <source srcset="build/img/producto_06.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_06.jpg" alt="productos6" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 6</h3>
+                    <p class="producto__descripcion">Lorem ipsum consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_07.avif" type="image/avif">
+                        <source srcset="build/img/producto_07.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_07.jpg" alt="productos4" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 7</h3>
+                    <p class="producto__descripcion">Lorem ipsum consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="producto__mascara">
+                    <picture>
+                        <source srcset="build/img/producto_08.avif" type="image/avif">
+                        <source srcset="build/img/producto_08.webp" type="image/webp">
+                        <img loading="lazy" src="build/img/producto_08.jpg" alt="productos8" class="producto__imagen">
+                    </picture>
+                </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__titulo">Producto 8</h3>
+                    <p class="producto__descripcion">Lorem ipsum consequatur dolore ullam omnis incidunt fugiat sit repudiandae.</p>
+                    <p class="producto__precio">$ <span>25</span></p>
+                </div>
+            </div>
         </div>
+    </section>
+    <section class="cita">
+        <div class="cita__contenido"></div>
     </section>
 </body>
 
