--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
         </div>
     </section>
-    <section class="productos contenedor seccion">
+    <section class="productos contenedor">
         <h2 class="productos__heading">Nuestros <span>Productos</span></h2>
         <div class="productos__grid">
             <div class="producto">
@@ -273,7 +273,12 @@
         </div>
     </section>
     <section class="cita">
-        <div class="cita__contenido"></div>
+        <div class="cita__contenido">
+            <h2 class="cita__heading">Realiza una cita</h2>
+            <p class="cita__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, asperiores. consectetur adipisicing elit. Ad, asperiores.
+            </p>
+            <a href="#" class="cita__boton">Leer más</a>
+        </div>
     </section>
 </body>
 
