--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 
@@ -280,6 +281,28 @@
             <a href="#" class="cita__boton">Leer más</a>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="nosotros">
+                <h3>Nosotros</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet velit, iusto ad repellendus recusandae tempora ipsa architecto inventore maiores.</p>
+            </div>
+            <div class="hora">
+                <h3>Horario</h3>
+                <p class="hora">Lun-Vie: 9am-7pm</p>
+                <p class="hora">Sab: 10am-2pm</p>
+                <p class="hora">Domingo:cerrado</p>
+            </div>
+            <div class="contacto">
+                <h3>Contacto</h3>
+                <p class="direccion">Av.Revolución 1818</p>
+            </div>
+        </div>
+        <div class="copy">
+            <p>CarolinaSpa &salon &copy;Todos los derechos reservados</p>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 </body>
 
 </html>
