--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="slider">
+    <div class="slider contenedor">
         <ul class="slider__contenedor">
             <li class="slider__slide">
                 <picture>
@@ -303,6 +303,8 @@
         </div>
     </footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="js/app.js"></script>
+
 </body>
 
 </html>
