--- a/index.html
+++ b/index.html
@@ -45,20 +45,21 @@
                 <picture>
                     <source srcset="build/img/slide_01.avif" type="image/avif">
                     <source srcset="build/img/slide_01.webp" type="image/webp">
-                    <img loading="lazy" src="build/img/slide_01.jpg" alt="slide 1">
+                    <img loading="lazy" src="build/img/slide_01.jpg" alt="slide 1" class="slider__img">
                 </picture>
             </li>
             <li class="slider__slide">
                 <source srcset="build/img/slide_02.avif" type="image/avif">
                 <source srcset="build/img/slide_02.webp" type="image/webp">
-                <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1">
+                <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1" class="slider__img">
             </li>
             <li class="slider__slide">
                 <source srcset="build/img/slide_03.avif" type="image/avif">
                 <source srcset="build/img/slide_03.webp" type="image/webp">
-                <img loading="lazy" src="build/img/slide_03.jpg" alt="slide 1">
+                <img loading="lazy" src="build/img/slide_03.jpg" alt="slide 1" class="slider__img">
             </li>
         </ul>
+        <div class="slider__paginacion"></div>
     </div>
     <section class="bienvenida">
         <h1 class="bienvenida__heading">Bienvenido (a) a nuestro<span>Sitio web</span> </h1>
