--- a/index.html
+++ b/index.html
@@ -49,14 +49,18 @@
                 </picture>
             </li>
             <li class="slider__slide">
-                <source srcset="build/img/slide_02.avif" type="image/avif">
-                <source srcset="build/img/slide_02.webp" type="image/webp">
-                <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1" class="slider__img">
+                <picture>
+                    <source srcset="build/img/slide_02.avif" type="image/avif">
+                    <source srcset="build/img/slide_02.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1" class="slider__img">
+                </picture>
             </li>
             <li class="slider__slide">
-                <source srcset="build/img/slide_03.avif" type="image/avif">
-                <source srcset="build/img/slide_03.webp" type="image/webp">
-                <img loading="lazy" src="build/img/slide_03.jpg" alt="slide 1" class="slider__img">
+                <picture>
+                    <source srcset="build/img/slide_03.avif" type="image/avif">
+                    <source srcset="build/img/slide_03.webp" type="image/webp">
+                    <img loading="lazy" src="build/img/slide_03.jpg" alt="slide 1" class="slider__img">
+                </picture>
             </li>
         </ul>
         <div class="slider__paginacion"></div>
