--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
             </div>
         </div>
     </div>
-    <div class="slider contenedor">
-        <ul class="slider__contenedor">
-            <li class="slider__slide">
+    <div class="swiper contenedor">
+        <ul class="swiper-wrapper">
+            <li class="swiper-slide">
                 <picture>
                     <source srcset="build/img/slide_01.avif" type="image/avif">
                     <source srcset="build/img/slide_01.webp" type="image/webp">
                     <img loading="lazy" src="build/img/slide_01.jpg" alt="slide 1" class="slider__img">
                 </picture>
             </li>
-            <li class="slider__slide">
+            <li class="swiper-slide">
                 <picture>
                     <source srcset="build/img/slide_02.avif" type="image/avif">
                     <source srcset="build/img/slide_02.webp" type="image/webp">
                     <img loading="lazy" src="build/img/slide_02.jpg" alt="slide 1" class="slider__img">
                 </picture>
             </li>
-            <li class="slider__slide">
+            <li class="swiper-slide">
                 <picture>
                     <source srcset="build/img/slide_03.avif" type="image/avif">
                     <source srcset="build/img/slide_03.webp" type="image/webp">
