--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
                 <img src="src/img/logo.svg" alt="logo">
             </div>
             <nav class="redes">
-                <a href="#" class="redes__icono">Facebook</a>
-                <a href="#" class="redes__icono">Twuiter</a>
-                <a href="#" class="redes__icono">Instagram</a>
-                <a href="#" class="redes__icono">YouTube</a>
-                <a href="#" class="redes__icono">TikTok</a>
+                <a href="#" class="redes__icono"></a>
+                <a href="#" class="redes__icono"></a>
+                <a href="#" class="redes__icono"></a>
+                <a href="#" class="redes__icono"></a>
             </nav>
         </div>
     </header>
